2005-01-11  Nathaniel Smith  <njs@codesourcery.com>

	* diff_patch.cc (normalize_extents): Add warning for anyone who
	manages to trigger the untested part of the normalization code.

2005-01-11  Nathaniel Smith  <njs@codesourcery.com>

	* tests/t_migrate_schema.at: Switch to using pre-dumped db's, make
	it work, un-XFAIL it.

2005-01-11  Nathaniel Smith  <njs@codesourcery.com>

	* tests/t_persistent_server_keys_2.at: XFAIL it, add commentary on
	solution.
	
2005-01-11  Nathaniel Smith  <njs@codesourcery.com>

	* tests/t_persistent_server_keys_2.at: New test.
	* testsuite.at: Add it.

2005-01-06  Nathaniel Smith  <njs@codesourcery.com>

	* schema_migration.cc (migrate_monotone_schema): Add comment
	pointing to t_migrate_schema.at.
	* tests/t_migrate_schema.at: Implement, mostly.  (Still broken.)

	* tests/t_heads_discontinuous_branch.at: Remove urgency
	annotation.
	* tests/t_netsync_nocerts.at: Add urgency annotation.

	* testsuite.at: Add UNGZ, UNGZB64 macros.
	* tests/t_fmerge.at: Use them.

2005-01-05  Nathaniel Smith  <njs@codesourcery.com>

	* schema_migration.cc: Update comment about depot code.
	(migrate_depot_split_seqnumbers_into_groups):
	(migrate_depot_make_seqnumbers_non_null):
	(migrate_depot_schema): Remove; all are dead code.
	
2005-01-05  Nathaniel Smith  <njs@codesourcery.com>

	* schema_migration.cc: Remove tabs.

2005-01-05  Nathaniel Smith  <njs@codesourcery.com>

	* tests/t_check_same_db_contents.at: Uncapitalize title to unbreak
	testsuite.

	* revision.cc (is_ancestor): Add FIXME comment.
	(erase_ancestors): New function.
	* revision.hh (erase_ancestors): Prototype it.
	* cert.cc (get_branch_heads): Call it.
	* tests/t_heads_discontinuous_branch.at: Un-XFAIL it.

	* revision.cc (find_subgraph_for_composite_search): Ignore null
	revision ids.
	* commands.cc (try_one_merge): Add invariant - never create merges
	where the left parent is an ancestor or descendent of the right.
	(explicit_merge): Same check.