@@ -1,0 +1,32 @@
+AT_SETUP([update 1])
+MONOTONE_SETUP
+
+# We have A1 -> B1, A and B different branches.  Update from A1
+# shouldn't take us to B1.  Then propagate B -> A, and update from A1;
+# now this should take us to B1.
+
+ADD_FILE(testfile, [stuff stuff
+])
+COMMIT(a)
+A1_SHA=`BASE_REVISION`
+
+SET_FILE(testfile, [nonsense nonsense
+])
+COMMIT(b)
+B1_SHA=`BASE_REVISION`
+
+REVERT_TO($A1_SHA)
+# Put in an explicit --branch, because REVERT_TO is not smart about
+# such things.
+AT_CHECK(MONOTONE --branch=a update, [], [ignore], [ignore])
+AT_CHECK(test $A1_SHA == `BASE_REVISION`)
+
+AT_CHECK(MONOTONE propagate b a, [], [ignore], [ignore])
+
+REVERT_TO($A1_SHA)
+# Put in an explicit --branch, because REVERT_TO is not smart about
+# such things.
+AT_CHECK(MONOTONE --branch=a update, [], [ignore], [ignore])
+AT_CHECK(test $B1_SHA == `BASE_REVISION`)
+
+AT_CLEANUP
