@@ -390,3 +390,4 @@ m4_include(tests/t_merge_ancestor.at)
 m4_include(tests/t_propagate_desc.at)
 m4_include(tests/t_propagate_anc.at)
 m4_include(tests/t_persistent_server_keys_2.at)
+m4_include(tests/t_update_1.at)
