@@ -1,3 +1,8 @@
+2005-01-17  Nathaniel Smith  <njs@codesourcery.com>
+
+	* tests/t_update_1.at: New test.
+	* testsuite.at: Call it.
+
 2005-01-11  Nathaniel Smith  <njs@codesourcery.com>
 
 	* diff_patch.cc (normalize_extents): Add warning for anyone who
